--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "browserslist": "last 4 versions",
   "dependencies": {
+    "gsap": "^3.7.1",
     "parcel": "^2.0.0-rc.0",
     "sass": "^1.39.2"
   },
