--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel src/index.html src/main.css",
     "build": "parcel build src/index.html",
-    "sass": "sass src/scss/main.scss src/css/main.css",
+    "sass": "sass --watch src/scss/main.scss src/main.css",
     "prefix": "postcss src/css/main.css --use autoprefixer -d src/"
   },
   "keywords": [],
@@ -13,14 +13,12 @@
   "license": "ISC",
   "browserslist": "last 4 versions",
   "dependencies": {
-    "gsap": "^3.7.1",
-    "parcel": "^2.0.0-rc.0",
-    "sass": "^1.39.2"
+    "gsap": "^3.7.1"
   },
   "devDependencies": {
     "@parcel/transformer-image": "^2.0.0-rc.0",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
-    "autoprefixer": "^10.3.4",
-    "postcss-cli": "^8.3.1"
+    "parcel": "^2.0.1",
+    "sass": "^1.43.5"
   }
 }
